<resources>
    <string name="app_name">Demo3</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="wellcome">WELLCOME</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="back">Back</string>
    <string name="send_email">Send Email</string>
    <string name="add_image">Add Image</string>
    <string name="admin">admin</string>
    <string name="leson">leson</string>
    <string name="save_image">Save Image</string>
    <string name="my_email">lesonitdn98@gmail.com</string>
    <string name="my_age">21</string>
</resources>
