<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <Button
        android:id="@+id/openCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/add_image"
        android:textAllCaps="false"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image"
        />

    <Button
        android:id="@+id/saveImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/save_image"
        android:textAllCaps="false"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/openCamera"
        />

    <Button
        android:id="@+id/sendMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/send_email"
        android:textAllCaps="false"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info"
        />

    <GridLayout
        android:id="@+id/myForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal"
        android:padding="20dp"
        android:rowCount="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UselessLeaf"
        >

        <Button
            android:id="@+id/login"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_row="2"
            android:text="@string/login"
            android:textAllCaps="false"
            />

        <EditText
            android:id="@+id/myPassword"
            android:layout_width="250dp"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_row="1"
            android:hint="@string/password"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:singleLine="true"
            android:text="@string/leson"
            tools:ignore="Autofill,LabelFor,TextFields"
            />

        <EditText
            android:id="@+id/myUsername"
            android:layout_width="250dp"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_row="0"
            android:hint="@string/username"
            android:singleLine="true"
            android:text="@string/admin"
            tools:ignore="Autofill,LabelFor,TextFields"
            />

        <TextView
            android:layout_width="100dp"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_row="0"
            android:text="@string/username"
            />

        <TextView
            android:layout_width="100dp"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_row="1"
            android:text="@string/password"
            />

    </GridLayout>

    <ImageView
        android:id="@+id/image"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        android:background="#ededed"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendMail"
        tools:ignore="ContentDescription,MissingConstraints"
        />

    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>