<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <GridLayout
        android:id="@+id/myForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:columnCount="2"
        android:orientation="horizontal"
        android:padding="20dp"
        android:rowCount="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myName"
        tools:ignore="UselessLeaf"
        >

        <Button
            android:id="@+id/back"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_row="2"
            android:text="@string/back"
            android:textAllCaps="false"
            />

        <EditText
            android:id="@+id/myEmail"
            android:layout_width="250dp"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_row="1"
            android:hint="@string/email"
            android:imeOptions="actionGo"
            android:singleLine="true"
            tools:ignore="Autofill,LabelFor,TextFields"
            />

        <EditText
            android:id="@+id/myAge"
            android:layout_width="250dp"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_row="0"
            android:inputType="number"
            android:hint="@string/age"
            android:singleLine="true"
            tools:ignore="Autofill,LabelFor,TextFields"
            />

        <TextView
            android:layout_width="100dp"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_row="0"
            android:text="@string/age"
            />

        <TextView
            android:layout_width="100dp"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_row="1"
            android:text="@string/email"
            />

    </GridLayout>

    <TextView
        android:id="@+id/myName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wellcome"
        tools:ignore="MissingConstraints"
        />

    <TextView
        android:id="@+id/wellcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/wellcome"
        android:textColor="#ff0000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>